<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="mp3_cutter">mp3 cutter</string>
    <string name="text_splash_1">loading resource</string>
    <string name="text_splash_2">download image</string>
    <string name="text_splash_3">handle error</string>
    <string name="text_splash_4">update version</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="permission">Permission</string>
    <string name="app_name_requires_these_permissions_to_function_properly">My Application requires these permissions to function properly.</string>
    <string name="camera">Camera</string>
    <string name="continue_without_permission">continue without permission</string>
    <string name="grant_permission_camera">grant permission camera</string>
    <string name="titleheaderaudio">Trim the Beat.\nFeel the Heat.</string>
    <string name="cut_now">cut now</string>
    <string name="speed_audio">speed audio</string>
    <string name="thereare">there are</string>
    <string name="gotocutter">go to cutter</string>
    <string name="setting">setting</string>
    <string name="server">server</string>
    <string name="audio_file_not_available">audio file not available</string>
    <string name="set_as_ringtone_successfully">set as ringtone successfully</string>
    <string name="failed_to_set_as_ringtone">failed to set as ringtone</string>
    <string name="set_as_alarm_tone_successfully">set as alarm tone successfully</string>
    <string name="failed_to_set_as_alarm">failed to set as alarm</string>
    <string name="set_as_notification_successfully">set as notification successfully</string>
    <string name="failed_to_set_as_notification">failed to set as notification</string>
    <string name="set_as_contact_tone_successfully">set as contact tone successfully</string>
    <string name="setasring">set as ringtone</string>
    <string name="info">info</string>
    <string name="folder">folder</string>
    <string name="size">size</string>
    <string name="modified">modified</string>
    <string name="path">path</string>
    <string name="set_as">set as</string>
    <string name="contact">contact</string>
    <string name="please_enable_modify_system_settings_and_return_to_the_app">please enable modify system settings and return to the app</string>
    <string name="cannot_open_settings">cannot open settings</string>
    <string name="permission_required_to_set_ringtones">permission required to set ringtones</string>
    <string name="permission_required_to_set_notifications">permission required to set notifications</string>
    <string name="permission_required_to_set_alarms">permission required to set alarms</string>
    <string name="permission_required_to_set_contact">permission required to set contact</string>
    <string name="allow_system_settings_title">allow system settings title</string>
    <string name="allow_system_settings">allow system settings</string>
    <string name="cannot_open_contacts">cannot open contacts</string>
    <string name="permissions_granted">permissions granted</string>
    <string name="permissions_denied">permissions denied</string>
    <string name="permission_is_required">permission is required</string>
    <string name="name">name</string>
    <string name="duration">duration</string>
    <string name="date">date</string>
    <string name="sorted_by">Sorted by %1$s</string>
    <plurals name="files_selected">
        <item quantity="one">%d File selected</item>
        <item quantity="other">%d Files selected</item>
    </plurals>
    <string name="txt_sort_order">Sort order:</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
    <string name="txt_save">save</string>
    <string name="txt_files">Files</string>
    <string name="txt_folders">Folders</string>
    <string name="next">next</string>
    <string name="txt_sort">Sort</string>
    <string name="txt_sorted_by">Sorted by:</string>
    <string name="saved_audio">saved audio</string>
    <string name="view_all_history">view all history</string>
    <string name="continue_n">continue</string>
    <string name="permission_denied">permission denied</string>
    <string name="go_to_settings">Đi đến Cài đặt</string>
    <string name="cancel">cancel</string>
    <string name="permission_camera">Cần quyền Camera</string>
    <string name="permission_camera_message">Ứng dụng cần quyền truy cập Camera để chụp ảnh và quay video. Vui lòng cấp quyền trong cài đặt để tiếp tục sử dụng đầy đủ chức năng của ứng dụng.</string>
    <string name="permission_camera_explanation"> Ứng dụng cần quyền truy cập camera để bạn có thể chụp ảnh và quay video.</string>
    <string name="grant_permission">Cấp quyền</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_how_to_upload_images">Select how to upload images</string>
    <string name="gallery">Gallery</string>
    <string name="error">Error</string>
    <string name="no_face_detected">no face detected</string>
    <string name="please_try_again_with_a_frontal_portrait_photo">please try again with a frontal portrait photo</string>
    <string name="more_than_one_face_detected">more than one face detected</string>
    <string name="please_try_again_with_a_single_faced_frontal_portrait">please try again with a single faced frontal portrait</string>
    <string name="upload_image_error">Upload Image Error</string>
    <string name="oops_something_went_wrong_please_try_again">Oops! Something went wrong. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="choose_another_photo">choose another photo</string>
    <string name="your_style">Chọn 2 ảnh để hoán đổi khuôn mặt </string>
    <string name="generate">Generate</string>
    <string name="you_want_to_close_dialog">You want to close dialog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="select_audio">Select Audio</string>
    <string name="add_file">Add file</string>
    <string name="unknown">unknown</string>
    <string name="videotoaudio">Video To Audio</string>
    <string name="random">random</string>
    <string name="language">language</string>
    <string name="rating">rating</string>
    <string name="feedback">feedback</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="send">send</string>
    <string name="enter_your_feedback">enter your feedback</string>
    <string name="what_tip_you_like_to_give_us">what tip you like to give us</string>
    <string name="your_subject">your subject</string>
    <string name="choose_your_subject">choose your subject</string>
    <string name="done">done</string>
    <string name="submit">submit</string>
    <string name="let_us_know_your_experience_5_stars_is_the_best_on_google_play">let us know your experience 5 stars is the best on google play</string>
    <string name="thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that">thank you for taking the time to rate us i m really appreciate that</string>
    <string name="select_max_4">Please select minimum 1 video and maximum 4 video</string>
    <string name="please_select_a_media_file_at_least_5_seconds_long">Please select a media file at least 5 seconds long.</string>
    <string name="please_select_video">Please select at least 1 video</string>
    <string name="of_selected">%1$d of 4 selected</string>
    <string name="formart">formart</string>
    <string name="wav" translatable="false">WAV</string>
    <string name="aac" translatable="false">AAC</string>
    <string name="flac" translatable="false">FLAC</string>
    <string name="ogg" translatable="false">OGG</string>
    <string name="mp3" translatable="false">MP3</string>
    <string name="convert">convert</string>
    <string name="converting">converting...</string>
    <string name="stringnamefiledefault" translatable="false">audio_03092025_xxxxxx</string>
    <string name="durationspeedaudio" translatable="false">00:17:00</string>
    <string name="sizespeedaudio" translatable="false">104.kB</string>
    <string name="notification">notification</string>
    <string name="usefor">usefor</string>
    <string name="failed_to_set_contact_ringtone">failed to set contact ringtone</string>
    <string name="detail">detail</string>
    <string name="result">result</string>
    <string name="play">play</string>
    <string name="more">more</string>
    <string name="duration_result">duration result</string>
    <string name="speed">speed</string>
    <string name="duration_begin">Duration begin: %s</string>
    <string name="file_not_ready">file not ready</string>
    <string name="_0_5" translatable="false">0.5</string>
    <string name="_0_75" translatable="false">0.75</string>
    <string name="_1" translatable="false">1</string>
    <string name="_1_25" translatable="false">1.25</string>
    <string name="_1_5" translatable="false">1.5</string>
    <string name="_1_75" translatable="false">1.75</string>
    <string name="_2" translatable="false">2</string>
    <string name="saving">saving</string>
    <string name="no_files">no files</string>
    <string name="saving_your_audio_please_wait">saving your audio please wait</string>
    <string name="home">home</string>
    <string name="rename_success">rename success</string>
    <string name="share">share</string>
    <string name="audiohistory">history</string>
    <string name="all">all</string>
    <string name="there_are_currently_no_files_here">there are currently no files here</string>
    <string name="audiospeed">audiospeed</string>
    <string name="ringtone">ringtone</string>
    <string name="alarm">alarm</string>
    <string name="contract">contract</string>
    <string name="cutter">cutter</string>
    <string name="rename">rename</string>
    <string name="player">player</string>
    <string name="enter_name">Enter name</string>
    <string name="txt_cancel">Cancel</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="confirm">confirm</string>
    <string name="_0">0%</string>
    <string name="do_you_want_to_exit_this_screen">do you want to exit this screen</string>
    <string name="doyouwantdeletethisfile">Do you want to delete this file?</string>
    <string name="format_duration">Thời gian: %1$s</string>
    <string name="convertion">convertion</string>
    <string name="alert">alert</string>
    <string name="do_you_want_to_cancel_the_conversion">do you want to cancel the conversion</string>
    <string name="ok">ok</string>
    <string name="durationeditspeedaudio" translatable="false">00:08:08</string>
    <string name="error_occurred_generic">error occurred generic</string>
    <string name="please_select_audio_files_with_a_total_duration_of_up_to_30_minutes">please select audio files with a total duration of up to 30 minutes</string>
</resources>