<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="22dp"
    android:layout_marginBottom="22dp"
    android:background="@drawable/bg_radius_8_eeeeee">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/figtree_semi_bold"
        android:text="@string/txt_sort"
        android:textColor="@color/color_000000_7"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sorted_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/figtree_medium"
        android:text="@string/txt_sorted_by"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_sort" />

    <RadioGroup
        android:id="@+id/rgSortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sorted_by">

        <RadioButton
            android:id="@+id/rbDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:checked="false"
            android:paddingHorizontal="8dp"
            android:theme="@style/RadioButtonMain" />

        <RadioButton
            android:id="@+id/rbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:checked="false"
            android:paddingHorizontal="8dp"
            android:theme="@style/RadioButtonMain" />

        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:checked="false"
            android:paddingHorizontal="8dp"
            android:theme="@style/RadioButtonMain" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sort_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/figtree_medium"
        android:text="@string/txt_sort_order"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSortBy" />


    <RadioGroup
        android:id="@+id/rgSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sort_order">

        <RadioButton
            android:id="@+id/rbDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:checked="false"
            android:paddingHorizontal="8dp"
            android:theme="@style/RadioButtonMain" />

        <RadioButton
            android:id="@+id/rbAscending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:checked="false"
            android:paddingHorizontal="8dp"
            android:theme="@style/RadioButtonMain" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSortOrder">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/txt_cancel"
            android:fontFamily="@font/figtree_medium"
            android:textColor="@color/color_7F7F7F"
            android:textSize="16sp" />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_8_ee5300"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/txt_save"
            android:fontFamily="@font/figtree_medium"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>