<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp"
    android:background="@drawable/bg_round_8_border">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_as"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/figtree_semi_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <RadioButton
            android:id="@+id/rabRingtone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:buttonTint="@color/color_00C40D"
            android:fontFamily="@font/figtree_medium"
            android:text="@string/ringtone"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rabAlarmTone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:buttonTint="@color/color_00C40D"
            android:fontFamily="@font/figtree_medium"
            android:text="@string/alarm"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rabNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:buttonTint="@color/color_00C40D"
            android:fontFamily="@font/figtree_medium"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rabContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="30dp"
            android:buttonTint="@color/color_00C40D"
            android:fontFamily="@font/figtree_medium"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="14dp"
        android:text="@string/txt_cancel"
        android:textColor="@color/color_7F7F7F"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/figtree_semi_bold"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/bg_radius_8_ee5300"
        android:textSize="16sp"
        android:fontFamily="@font/figtree_semi_bold"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>