<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet_send_email"
    android:fitsSystemWindows="false"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/figtree_semi_bold"
        android:text="@string/feedback"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/icDismiss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon_dismis_dialog_sendemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChosseYourSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/choose_your_subject"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_et_detais"
        android:fontFamily="@font/figtree_regular"
        android:hint="@string/your_subject"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tvChosseYourSubject"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_what_tip_you_like_to_give_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/figtree_regular"
        android:text="@string/what_tip_you_like_to_give_us"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubject" />

    <EditText
        android:id="@+id/et_enter_your_feedback"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_et_detais"
        android:fontFamily="@font/figtree_regular"
        android:gravity="top"
        android:hint="@string/enter_your_feedback"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_what_tip_you_like_to_give_us"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="20dp"
        android:padding="14dp"
        android:background="@drawable/bg_radius_8_ee5300"
        android:fontFamily="@font/figtree_semi_bold"
        android:gravity="center"
        android:text="@string/send"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_your_feedback" />


</androidx.constraintlayout.widget.ConstraintLayout>